[FIX] input visibility; back to profile from save password on menu button click

--- a/packages/client/src/components/UI-elements/Button/Button.module.sass
+++ b/packages/client/src/components/UI-elements/Button/Button.module.sass
@@ -43,3 +43,7 @@
 
 .button_hidden
   display: none
+
+.button_marginDown
+  margin-top: 10px
+  margin-bottom: 20px
