--- a/packages/client/src/pages/profile/Profile.module.sass
+++ b/packages/client/src/pages/profile/Profile.module.sass
@@ -33,5 +33,13 @@
 .profile__avatarInput
   display: none
 
+.profile__avatarFileLabel
+  margin-top: 10px
+  font-size: font-sizes.$systemMessages
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  max-width: 280px
+
 .hide
   display: none
